--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,17 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password= 
+spring.datasource.initialization-mode=always
+spring.datasource.platform=h2
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.generate-ddl=true
+
+# Flyway Configurations
+spring.flyway.url=jdbc:h2:mem:testdb
+spring.flyway.user=sa
+spring.flyway.password=
 
